Added :  database migration & entity model with forignkey relation

--- a/QuantityMeasurement/appsettings.json
+++ b/QuantityMeasurement/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DatabaseConnection": "Data Source=DESKTOP-7OOQJED\\SQLEXPRESS;Initial Catalog=QuantityMeasurementDB;Integrated Security=True"
+  },
   "AllowedHosts": "*"
 }
