--- a/QuantityMeasurement/QuantityMeasurement.csproj
+++ b/QuantityMeasurement/QuantityMeasurement.csproj
@@ -12,6 +12,9 @@
     </PackageReference>
 <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
