Added : Dockerfile and removed connection string for security purpose

--- a/QuantityMeasurement/appsettings.json
+++ b/QuantityMeasurement/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DatabaseConnection": "Data Source=DESKTOP-7OOQJED\\SQLEXPRESS;Initial Catalog=QuantityMeasurementDB;Integrated Security=True"
+    "DatabaseConnection": "test"
   },
   "AllowedHosts": "*"
 }
