--- a/QuantityMeasurement/QuantityMeasurement.csproj
+++ b/QuantityMeasurement/QuantityMeasurement.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +14,7 @@
     </PackageReference>
 <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.3" />
