Added : Consul Configuration

--- a/QuantityMeasurement/appsettings.json
+++ b/QuantityMeasurement/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DatabaseConnection": "test"
+    "DatabaseConnection": "Data Source=DESKTOP-EJ98MQC\\SQLEXPRESS;Initial Catalog=QuantityMeasurementApp;Integrated Security=True"
   },
   "AllowedHosts": "*"
 }
